--- a/param/laser_range_filter.yaml
+++ b/param/laser_range_filter.yaml
@@ -4,6 +4,6 @@ scan_filter_chain:
   params:
     use_message_range_limits: false
     lower_threshold: 0.12
-    upper_threshold: .inf
-    lower_replacement_value: 4.4
-    upper_replacement_value: .inf
+    upper_threshold: 8.0
+    lower_replacement_value: -.inf
+    upper_replacement_value: 7.5
