--- a/package.xml
+++ b/package.xml
@@ -61,7 +61,12 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>tf2</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>roslaunch</build_depend>
+  <build_depend>rosbag</build_depend>
+  <build_depend>cartographer_ros</build_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>dynamic_reconfigure</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
@@ -74,7 +79,12 @@
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>tf</build_export_depend>
+  <build_export_depend>tf2</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>visualization_msgs</build_export_depend>
+  <build_export_depend>roslaunch</build_export_depend>
+  <build_export_depend>rosbag</build_export_depend>
+  <build_export_depend>cartographer_ros</build_export_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
@@ -87,7 +97,13 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
+  <exec_depend>tf2</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
   <exec_depend>visualization_msgs</exec_depend>
+  <exec_depend>roslaunch</exec_depend>
+  <exec_depend>rosbag</exec_depend>
+  <exec_depend>cartographer_ros</exec_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
